Add TV info API with system and input status endpoints
- Add getSystemInformation, getCurrentExternalInputsStatus, and other JSON-RPC methods
- Create /tv-info endpoint exposing TV model, connected inputs, and device info
- Return comprehensive data: model XBR-55X800E, MAC address, HDMI connections, etc.

--- a/server/.env.example
+++ b/server/.env.example
@@ -5,6 +5,9 @@ NODE_ENV=development
 # TV Configuration (can be overridden via UI)
 TV_IP=192.168.1.28
 PSK_KEY=3553
+# Optional: TV's MAC address for reliable Wake-on-LAN (format: AA:BB:CC:DD:EE:FF)
+# Find this in your TV's network settings. If not provided, system will attempt ARP lookup.
+MAC_ADDRESS=
 
 # CORS Configuration
 CORS_ORIGIN=http://localhost:5173
